# Django

./: .env.sample  .gitignore  README.md  catalog_fixture.json  pyproject.toml  users_fixture.json  users_groups_fixture.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: publication_confirm_delete.html  publication_create.html  publication_detail.html  publication_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_products.py
catalog/migrations/: 0001_initial.py  0002_product_is_active_alter_product_category_and_more.py  0003_alter_product_options_remove_product_is_active_and_more.py
catalog/templates/: base.html  category.html  contacts.html  header.html  home.html  product_card.html  product_confirm_delete.html  product_form.html
config/: constants.py  settings.py  urls.py
static/js/: bootstrap.bundle.js
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html  register.html
